# Final-Year-Project

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: code-analyzer.md  code-fixer.md
.claude/commands/: improve.md
.github/workflows/: aws-provision.yml  playwright.yml
app/: package-lock.json
backend/app/: Dockerfile  translate_helper_functions.py  translate_lambda.py  translate_requirements.txt  translate_worker_lambda.py
backend/terraform/: provider.tf  s3.tf  translate_lambda.tf  variables.tf
polydoc-skill/: SKILL.md
polydoc-skill/scripts/: translate.py
research/: embeddings.ipynb  pyproject.toml  research.ipynb  subtitles_translation.ipynb
research/documents/EUconst_v1/: EUconst.cs-en.cs.txt  EUconst.cs-en.en.txt
research/documents/subtitles/: s1e1.txt  s1e2.txt  s1e3.txt  s1e4.txt  s1e5.txt  s1e6.txt  s1e7.txt
showcase/: app.js  index.html  style.css
web-app/: next.config.ts  package-lock.json  package.json  playwright.config.ts
web-app/app/: layout.tsx  page.tsx
web-app/app/about/: page.tsx
web-app/app/api/document/: route.ts
web-app/app/api/translate/: route.ts
web-app/app/translate/: page.tsx
web-app/components/: document-editor.tsx  file-dialog.tsx  navbar.tsx  select-file-btn.tsx  translation-demo.tsx
web-app/context/: file-context.tsx
web-app/lib/: aws-clients.ts  languages.ts
web-app/tests/: file-dialog.spec.ts  translate-flow.spec.ts  translate-page.spec.ts
web-app/tests/fixtures/: test-doc.docx
